circt-bc260128-00000bec/origin/error.txt
Crash Type: assertion
Testcase ID: 260128-00000bec

--- Compilation Command ---
/edazz/FeatureFuzz-SV/target/circt-1.139.0/bin/circt-verilog --ir-hw /tmp/featurefuzz_sv_xfhtv50x/test_21fb76dc4c42.sv | /edazz/FeatureFuzz-SV/target/circt-1.139.0/bin/arcilator | /edazz/FeatureFuzz-SV/target/circt-1.139.0/bin/opt -O0 | /edazz/FeatureFuzz-SV/target/circt-1.139.0/bin/llc -O0 --filetype=obj -o /tmp/featurefuzz_sv_xfhtv50x/test_21fb76dc4c42.o

--- Error Message ---
<stdin>:3:10: error: failed to legalize operation 'sim.fmt.literal'
    %0 = sim.fmt.literal "Error: Assertion failed: q_reg != 0"
         ^
<stdin>:3:10: note: see current operation: %30 = "sim.fmt.literal"() <{literal = "Error: Assertion failed: q_reg != 0"}> : () -> !sim.fstring
